# zstd

./: .clang-format  .eslintignore  .eslintrc.json  .gitignore  .mocharc.json  .npmignore  .prettierrc.json  .release-please-manifest.json  Cargo.toml  HISTORY.md  LICENSE.md  README.md  binding.gyp  bindings.js  docker.sh  index.d.ts  index.js  package-lock.json  package.json  readme.md  referece.gyp  release-please-config.json  sbom.json  test.cpp  tsconfig.json
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/docker/: Dockerfile.glibc  Dockerfile.musl
.github/scripts/: pr_list.mjs  release_notes.mjs
.github/workflows/: CI.yml  build.yml  codeql.yml  lint.yml  release.yml  test.yml  webpack.yml
addon/: compress.h  compression.cpp  compression.h  compression_worker.h  compressor.h  decompress.h  decompressor.h  napi_utils.h  zstd.cpp
etc/: docker.sh  install-zstd.sh
lib/: index.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
src/: addon.cpp  lib.rs
test/: debug.js  glibc.test.js  index.test.js  index.test.ts
(+7 files in other folders)
