[package]
edition = "2021"
name = "mongodb-js_zstd"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
napi = { version = "2.1.0", default-features = false, features = [
  "napi8",
  "async"
] }
napi-derive = "2.1.0"
zstd = "0.11"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
