[package]
edition = "2021"
name = "mongodb-js_zstd"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
napi = { version = "2.4.3", default-features = false, features = [
  "napi8",
  "async"
] }
napi-derive = "2.4.1"
zstd = "0.11"

[build-dependencies]
napi-build = "2.0.0"

[profile.release]
lto = true
